fix contrast ratio

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 .header__title {
   font-size: 2rem;
   font-weight: 700;
-  color: $info;
+  color: $primary;
 }
