--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -37,7 +37,7 @@
       color: $dark;
 
       &:hover {
-        color: $info;
+        color: $primary;
       }
     }
   }
